this is adding side bar and adding elemnts to it

--- a/style.css
+++ b/style.css
@@ -11,5 +11,12 @@
 }
 
 #main-navbar ul li a:hover{
-  background-color: #800;
+  background-color: #000;
+}
+
+#sidebar{
+  background-color: red;
+  width: 20%;
+  height: 100%
+  padding: 15px 0;
 }
