--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
+#main-navbar{
+  background-color: blue;
+  overflow: hidden;
+  float: left;
+}
+
 #main-navbar ul{
   list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  left:50%
+  float: left;
 }
 
 #main-navbar ul li a{
   display: block;
-  background-color: blue;
   color : #fff;
   padding: 10px 20px;
   text-decoration: none;
