--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
   float: left;
 }
 
+#main-navbar ul li{
+ float: left;
+ position: relative;
+ right: 50%
+ display: block;
+}
+
 #main-navbar ul li a{
   display: block;
   color : #fff;
