--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@
   margin: 0;
   padding: 0;
   position: relative;
-  left:50%
+  left:50%;
   float: left;
 }
 
 #main-navbar ul li{
  float: left;
  position: relative;
- right: 50%
+ right: 50%;
  display: block;
 }
 
@@ -43,10 +43,26 @@
 #sidebar{
   background-color: red;
   width: 20%;
-  height: 100%
+  height: 100%;
   padding: 15px 0;
 }
 
 #sidebar-container{
+
+}
+
+#onpage{
+
+}
+
+#sidebar ul{
+
+}
+
+#sidebar ul li{
+
+}
+
+#sidebar ul li a{
 
 }
