added all given sidebar elements given

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 #navbar-container{
-  width: 100%
+  width: 100%;
   position: relative;
 }
 
@@ -41,14 +41,15 @@
 }
 
 #sidebar{
+  position: fixed;
+  right: 0%;
   background-color: red;
   width: 20%;
   height: 100%;
-  padding: 15px 0;
 }
 
 #sidebar-container{
-
+  
 }
 
 #onpage{
@@ -56,13 +57,21 @@
 }
 
 #sidebar ul{
-
+  list-style-type: none;
+  text-align: center;
 }
 
 #sidebar ul li{
-
+  padding: 0;
 }
 
 #sidebar ul li a{
+  display: block;
+  padding: 15px 0;
+  color: #fff;
+  text-decoration: none;
+}
 
+#sidebar ul li a:hover{
+  background-color: #000;
 }
